[package]
name = "tantivy-analysis-contrib"
version = "0.0.0"
edition = "2021"
authors = ["dalvany"]
description = "A set of analysis components for Tantivy"
repository = "https://github.com/Dalvany/tantivy-analysis-contrib"
homepage = "https://github.com/Dalvany/tantivy-analysis-contrib"
documentation = "https://docs.rs/tantivy-analysis-contrib"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["internationalization", "localization", "text-processing"]
keywords = ["icu", "tantivy"]
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["icu"]
icu = ["tokenizer", "normalizer", "transform"]
tokenizer = ["rust_icu_ubrk"]
normalizer = ["rust_icu_unorm2"]
transform = ["rust_icu_sys", "rust_icu_utrans"]

[dependencies]
tantivy = "0"
# Switch to full icu lib when possible
rust_icu_sys = { version = "2.0", optional = true }
rust_icu_unorm2 = { version = "2.0", optional = true }
rust_icu_ubrk = { version = "2.0", optional = true }
rust_icu_utrans = { version = "2.0", optional = true }