[package]
name = "tantivy-analysis-contrib"
version = "0.6.2"
edition = "2021"
authors = ["dalvany"]
description = "A set of analysis components for Tantivy"
repository = "https://github.com/Dalvany/tantivy-analysis-contrib"
homepage = "https://github.com/Dalvany/tantivy-analysis-contrib"
documentation = "https://docs.rs/tantivy-analysis-contrib"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["internationalization", "localization", "text-processing"]
keywords = ["icu", "tantivy"]
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["icu", "commons", "phonetic"]
icu = ["tokenizer", "normalizer", "transform"]
tokenizer = ["rust_icu_ubrk"]
normalizer = ["rust_icu_unorm2"]
transform = ["rust_icu_sys", "rust_icu_utrans"]
commons = ["derive_builder", "either", "fst"]
phonetic = ["rphonetic"]
embedded = ["embedded_bm", "embedded_dm"]
embedded_bm = ["rphonetic/embedded_bm"]
embedded_dm = ["rphonetic/embedded_dm"]

[dependencies]
tantivy = "0.18"

# Switch to full icu lib when possible
rust_icu_sys = { version = "3.0", optional = true }
rust_icu_unorm2 = { version = "3.0", optional = true }
rust_icu_ubrk = { version = "3.0", optional = true }
rust_icu_utrans = { version = "3.0", optional = true }

# Phonetic
rphonetic = { version = "1.3", optional = true }

# Automaton
fst = { version = "0.4", optional = true }

derive_builder = { version = "0.12", optional = true }

either = {version = "1.7", optional = true}

[dev-dependencies]
lazy_static = "1.4"
tempdir = "0.3"
