[package]
name = "tantivy-analysis-contrib"
version = "0.12.4"
edition = "2021"
rust-version = "1.70.0"
authors = ["dalvany"]
description = "A set of analysis components for Tantivy"
repository = "https://github.com/Dalvany/tantivy-analysis-contrib"
homepage = "https://github.com/Dalvany/tantivy-analysis-contrib"
documentation = "https://docs.rs/tantivy-analysis-contrib"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["internationalization", "localization", "text-processing"]
keywords = ["icu", "tantivy"]
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["icu", "commons", "phonetic"]
#! General components
## ICU components. It needs libicu-dev and clang installed.
icu = [
    "rust_icu_ubrk",
    "rust_icu_unorm2",
    "rust_icu_sys",
    "rust_icu_utrans",
    "rust_icu_common",
]
## Miscellaneous components
commons = ["derive_builder", "either", "fst"]
#! Phonetic
## Phonetic token filters
phonetic = ["rphonetic"]
## Default phonetic rules. 
## It enables `embedded_bm` and `embedded_dm`
embedded = ["embedded_bm", "embedded_dm"]
## Include Beider-Morse rules.
embedded_bm = ["rphonetic/embedded_bm"]
## Include Daitch-Mokotoff rules.
embedded_dm = ["rphonetic/embedded_dm"]

[dependencies]
tantivy-tokenizer-api = "0.3"

# Switch to full icu lib when possible
rust_icu_sys = { version = "5.0", optional = true }
rust_icu_unorm2 = { version = "5.0", optional = true }
rust_icu_ubrk = { version = "5.0", optional = true }
rust_icu_utrans = { version = "5.0", optional = true }
rust_icu_common = { version = "5.0", optional = true }

# Phonetic
rphonetic = { version = "3.0", optional = true }

# Automaton
fst = { version = "0.4", optional = true }

# Error handling
thiserror = "2.0"

rustc-hash = "2.1"
derive_builder = { version = "0.20", optional = true }
either = { version = "1.13", optional = true }
document-features = "0.2"

[dev-dependencies]
lazy_static = "1.4"
tempfile = "3.14"
tantivy = "0.22"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
lazy_static = "1.4"
